<?php

namespace App\Enums;

enum Langue: string
{
    case Francais = 'fr';
    case Wolof    = 'wo';
}
