<?php

namespace App\Enums;

enum TypeContenu: string
{
    case Article = 'article';
    case Conseil = 'conseil';
    case Faq     = 'faq';
}
